--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="p-4 flex items-center">
         <div class="w-1/2 space-y-2">
           <p id="product-name" class="font-semibold text-sm"></p>
-          <p id="clave" class="font-semibold text-sm">Clave: 231232</p>
+          <p id="clave" class="font-semibold text-sm"></p>
         </div>
         <div class="w-1/2 flex justify-end">
           <img id="product-img" src="https://i.postimg.cc/VN3C9LT3/sabor-lima-limon.png" width="75" draggable="false">
@@ -58,32 +58,42 @@
           <div class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm">Ideal para</div>
           <div id="ideal-para" class="px-2 py-1 text-sm"></div>
         </div>
-      </div>
 
-      <div class="flex justify-center">
+        <!-- Informacion extra -->
+        <div class="flex justify-center space-x-1">
+          <div class=" border border-blue-500 rounded mb-2 w-1/2 bg-blue-200">
+            <div
+              class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm text-white font-semibold bg-blue-500">
+              Presentación</div>
+            <div id="presentacion" class="px-2 py-1 text-xs "></div>
+          </div>
+
+          <div class=" border border-blue-500 rounded mb-2 w-1/2 bg-blue-200 ">
+            <div
+              class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm text-white font-semibold bg-blue-500">
+              Modo de uso</div>
+            <div id="modo-de-uso" class="px-2 py-1 text-xs "></div>
+          </div>
+        </div>
+
         <div class=" border border-blue-500 rounded mb-2">
-          <div class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm text-white font-semibold bg-blue-500">Ideal para</div>
-          <div class="px-2 py-1 bg-blue-200 h-20">
+          <div
+            class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm text-white font-semibold bg-blue-500">
+            Principal diferenciador de la competencia</div>
+          <div class="px-2 py-1 bg-blue-200 ">
             <ul id="pdiferenciador" class="text-xs list-disc ml-3"></ul>
           </div>
         </div>
-        <div class=" border border-blue-500 rounded mb-2">
-          <div class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm text-white font-semibold bg-blue-500">Presentación</div>
-          <div id="presentacion" class="px-2 py-1 bg-blue-200 text-xs h-20"></div>
-        </div>
-      </div>
 
-      <div class="flex justify-center">
         <div class=" border border-blue-500 rounded mb-2">
-          <div class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm text-white font-semibold bg-blue-500">Modo de uso</div>
-          <div id="modo-de-uso" class="px-2 py-1 bg-blue-200 text-xs h-20"></div>
-        </div>
-        <div class=" border border-blue-500 rounded mb-2">
-          <div class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm text-white font-semibold bg-blue-500">Ingredientes</div>
-          <div class="px-2 py-1 bg-blue-200 h-20">
+          <div
+            class="border-b border-zinc-300 px-2 py-1 text-blue-700 font-semibold text-sm text-white font-semibold bg-blue-500">
+            Ingredientes</div>
+          <div class="px-2 py-1 bg-blue-200 ">
             <ul id="ingredientes" class="text-xs list-disc ml-3"></ul>
           </div>
         </div>
+
       </div>
     </div>
   </div>
